--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -1,6 +1,5 @@
 button{
     background-color: rgba(31, 61, 231, 0.966);
-    box-align: center;
     color: white;
     padding:10px 20px;
     cursor:pointer;
@@ -13,15 +12,23 @@ button{
     /*마우스 호버 시 스타일 변경*/
     button:hover {
             background-color : #101861fb;
-            box-shadow: 15px 15px 5px rgba(114, 83, 85, 0.89);
+            box-shadow: 15px 15px 5px rgba(20, 23, 139, 0.89);
     }
 
     .container{
+
         max-width: 800px;
         margin : 0 auto;
+       
+        @font-face {
+            font-family: "font1";
+            src: url(font-family: 'Nanum Myeongjo', serif;);
+        }
+       
     }
 
     h1{
+       
         text-align: center;
     }
 
@@ -43,9 +50,8 @@ button{
         padding:100;
     }
 
-    .form-container{
+    .form-container{   
         margin-top:20px;
-        margin-bottom :10px;
         background-color: #f5f5f5;
         text-align:center;
        
