--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -1,65 +1,22 @@
-button{
-    background-color: rgba(31, 61, 231, 0.966);
-    color: white;
-    padding:10px 20px;
-    cursor:pointer;
-    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.281);
+*{
+    box-sizing : border-box;
 
-    /*마우스를 가져갈 시 색상 반짝이는 효과 추가*/
-    transition : background-color 0.3s, box-shadow 0.3s;
-    
 }
-    /*마우스 호버 시 스타일 변경*/
-    button:hover {
-            background-color : #101861fb;
-            box-shadow: 15px 15px 5px rgba(20, 23, 139, 0.89);
-    }
 
-    .container{
+body{
 
-        max-width: 800px;
-        margin : 0 auto;
-       
-        @font-face {
-            font-family: "font1";
-            src: url(font-family: 'Nanum Myeongjo', serif;);
-        }
-       
-    }
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #f3f3f3;
+}
 
-    h1{
-       
-        text-align: center;
-    }
+h1{
+    text-align: center;
+    font-size: 28px;
+}
 
-    .post{
-        background-color: #f5f5f5;
-        border:1px solid #ccc;
-        /*solid : 실선 dott : 점선 dashed : 대시 none : 테두리없음*/
-        padding :10px;
-        margin-bottom :10px;
-    }
-
-    .post-list{
-        list-style-type : none;
-        padding : 0;
-    }
-
-    .post-list li{
-        margin-bottom :10px;
-        padding:100;
-    }
-
-    .form-container{   
-        margin-top:20px;
-        background-color: #f5f5f5;
-        text-align:center;
-       
-    }
-
-    .form-container input[type="text"],
-
-    .form-container textarea{
-        
-        margin-bottom:10px;
-    }
+#container{
+    width:80%;
+    margin:auto;
+    background-color: #fff;
+    box-shadow:0 0 10px rgba(0,0,0,0.1);
+}
