--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -2,9 +2,14 @@
     box-sizing : border-box;
 
 }
-
+@font-face {
+    font-family: 'HakgyoansimWoojuR';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/HakgyoansimWoojuR.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+    }
 body{
-
+    font-family: 'HakgyoansimWoojuR';
     font-family: Arial, Helvetica, sans-serif;
     background-color: #f3f3f3;
 }
@@ -19,4 +24,43 @@ h1{
     margin:auto;
     background-color: #fff;
     box-shadow:0 0 10px rgba(0,0,0,0.1);
+    padding: 20px;
+    border-radius: 10px;
+
+}
+
+.post{
+    border:1px solid #ddd;
+    margin:1px 0;
+    padding : 20px;
+    background-color:  #fff;
+}
+h2{
+    font-size: 20px;
+}
+
+form{
+    margin : 20px 0;
+    padding : 20px;
+    background-color: f9f9f9;
+    border:1px solid #ddd;
+
+}
+
+label{
+    display:block;
+    font-size: 20px;
+    input[type="text"], textarea{
+        width:100%;
+        padding:10px;
+        font-size: 16px;
+        border:1px solid #ccc;
+        border-radius: 5px;
+        margin:5px 0;
+    }
+}
+
+button[type="submit"]{
+background-color: #fff;
+border : gray;
 }
