--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -1,66 +1,70 @@
 *{
-    box-sizing : border-box;
-
+    
+    box-sizing: border-box;
 }
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #f3f3f3;
+}
+
+h1 {
+    text-align: center;
+    font-size: 28px;
+}
+
+h2 {
+    font-size: 20px;
+}
+
 @font-face {
     font-family: 'HakgyoansimWoojuR';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/HakgyoansimWoojuR.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
-    }
-body{
-    font-family: 'HakgyoansimWoojuR';
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #f3f3f3;
 }
 
-h1{
-    text-align: center;
-    font-size: 28px;
-}
-
-#container{
-    width:80%;
-    margin:auto;
+#container {
+    width: 80%;
+    margin: 0 auto;
     background-color: #fff;
-    box-shadow:0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
     padding: 20px;
     border-radius: 10px;
-
 }
 
-.post{
-    border:1px solid #ddd;
-    margin:1px 0;
+.post {
+    border:  1px solid #ddd;
+    margin: 10px 0;
     padding : 20px;
-    background-color:  #fff;
-}
-h2{
-    font-size: 20px;
+    background-color: #fff;
 }
 
 form{
-    margin : 20px 0;
-    padding : 20px;
-    background-color: f9f9f9;
-    border:1px solid #ddd;
-
+    margin: 20px 0;
+    padding: 20px;
+    background-color: #e9eff5;
+    border: 1px solid #ddd;
 }
 
-label{
-    display:block;
+label {
+    display: block;
     font-size: 20px;
-    input[type="text"], textarea{
-        width:100%;
-        padding:10px;
-        font-size: 16px;
-        border:1px solid #ccc;
-        border-radius: 5px;
-        margin:5px 0;
-    }
+}
+
+input[type="text"], textarea{
+    width: 100%;
+    padding:  10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin: 5px 0;
 }
 
 button[type="submit"]{
-background-color: #fff;
-border : gray;
+    background-color: #007BFF;
+    color: #fff;
+    border: none;
+    padding:10px 20px;
+    font-size:  18px;
+    cursor: pointer;
 }
