--- a/html/css/snowblog.css
+++ b/html/css/snowblog.css
@@ -3,16 +3,16 @@ body{
     margin: 0px;
     height: 1100px;
     width:100%;
+    position: absolute;
     }
-
 
 
 h3{
     left: 50%;
     position: absolute;
-    top: 90px;
+    top: 60px;
     transform: translate( -50%, -50%);
-    font-size:4em;
+    font-size:3em;
     color:rgb(255, 253, 253);
     font-family: 'iceJaram-Rg';
 }
@@ -20,13 +20,13 @@ h2{
     font-family: 'HakgyoansimWoojuR';
     left: 50%;
     position: absolute;
-    top: 60%;
+    top: 50%;
     width:700px;
     height: 800px;
     transform: translate( -50%, -50%);
     font-size:35px;
     color:black;
-    background-color: rgb(253, 253, 253);
+    background-color: rgba(255, 255, 255, 0.781);
     margin-top: 56px;
     padding: 10px;
     text-align: center;
@@ -73,47 +73,57 @@ h2{
         border-radius: 50px;
         box-shadow:0 3px 0px   #4f4e52;
     }
-audio::-webkit-media-controls-panel{
-    background-color:#727377;
-    
+    audio::-webkit-media-controls-panel{
+        background-color:#727377;
+        
 
-}
+    }
 
-audio::-webkit-media-controls-play-button{
-    background-color:#ffffff;
-    border-radius: 50%;
-    box-shadow:0 0 10px  #cccaca;
-}
+    audio::-webkit-media-controls-play-button{
+        background-color:#ffffff;
+        border-radius: 50%;
+        box-shadow:0 0 10px  #cccaca;
+    }
 
-.profile{
-    background:#e8eaee;
-    width:500px;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 40px;
-    padding :40px;
-    box-shadow:3px 4px 0px  #979696;
-    
-}
+    .profile{
+        background:#e8eaee;
+        width:500px;
+        margin-left: auto;
+        margin-right: auto;
+        border-radius: 40px;
+        padding :40px;
+        box-shadow:3px 4px 0px  #979696;
+        
+        
+    }
 
-button{
-    border : none;
-    background-color: #e8e8ec;
-    border-radius: 10px 10px 0px 0px ;
-    font-size: 20px;
-    font-family: 'HakgyoansimWoojuR';
-    padding-top: 6px;
-    margin-right: 6px;
-    width: 90px; 
-    color:rgb(17, 17, 31);
-    box-shadow:3px 0px 0px #9e9d9d;
-}
+    button{
+        border : none;
+        background-color: #e8e8ec;
+        border-radius: 10px 10px 0px 0px ;
+        font-size: 20px;
+        font-family: 'HakgyoansimWoojuR';
+        padding-top: 6px;
+        margin-right: 6px;
+        width: 90px; 
+        color:rgb(17, 17, 31);
+        box-shadow:3px 0px 0px #9e9d9d;
+    }
 
-.img{
-    background-color: #ffffff;
-    width: 450px;
-    padding-top:5px;
-    margin-left: auto ;
-    margin-right: auto ;
-    box-shadow:0px 0px 10px  #979696;
-}
+    .img{
+        background-color: #ffffff;
+        width: 450px;
+        padding-top:5px;
+        margin-left: auto ;
+        margin-right: auto ;
+        box-shadow:0px 0px 10px  #979696;
+    }
+
+    .pola{
+        background-color: #ffffff;
+        width: 450px;
+        height: 500px;
+        padding: 10px;
+        margin: 15px;
+        border-radius: 20px;
+    }
